--- a/www/channel-stats-day.html
+++ b/www/channel-stats-day.html
@@ -35,7 +35,7 @@
 
                 <div class=" text-capitalize">
                     <a class="color-inactive" href="channel.html">name-channal ipsumamet.</a></div>
-                <div class="ml-4 pe-7s-back "></div>
+                <div class="ml-4 pe-7s-angle-right"></div>
                 <div class="text-capitalize ">
                     <a class="ml-4" href="videos-stats.html">24 Nov Hourly report</a>
                 </div>
@@ -119,8 +119,11 @@
                                     <tr>
                                         <th>Date</th>
                                         <th>Views</th>
+                                        <th class="delta"></th>
                                         <th>Comments</th>
+                                        <th class="delta"></th>
                                         <th>Like</th>
+                                        <th class="delta"></th>
                                         <th>Dislikes</th>
                                     </tr>
                                     </thead>
@@ -128,170 +131,12 @@
                                     <tr>
                                         <td class="c-white">01:00</td>
                                         <td>323,222</td>
+                                        <td class="delta-number"><span>+25,654</span></td>
                                         <td>1,663,222</td>
+                                        <td class="delta-number"><span>+25,654</span></td>
                                         <td>4,222</td>
+                                        <td class="delta-number"><span>+25,654</span></td>
                                         <td>691,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">02:00</td>
-                                        <td>923,222</td>
-                                        <td>2,663,222</td>
-                                        <td>3,222</td>
-                                        <td>991,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">03:00</td>
-                                        <td>223,222</td>
-                                        <td>3,663,222</td>
-                                        <td>2,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">04:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">05:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">06:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">07:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">08:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">09:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">10:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">11:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">12:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">13:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">14:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">15:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">16:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">17:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">18:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">19:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">20:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">21:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">22:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">23:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">00:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
                                     </tr>
 
 
@@ -323,6 +168,10 @@
 <!--Graphs-->
 <script>
     $(document).ready(function () {
+
+
+        //disabled Legend
+        Chart.defaults.global.legend.display = false;
 //ChannelViews
         var ctxChannelStatsViews = document.getElementById("myChartChannelStats24Views").getContext('2d');
         var myChartChannelStatsViews = new Chart(ctxChannelStatsViews, {
