--- a/www/video-stats-day.html
+++ b/www/video-stats-day.html
@@ -36,12 +36,12 @@
 
                 <div class=" text-capitalize">
                     <a class="color-inactive" href="channel.html">name-channal ipsumamet.</a></div>
-                <div class="ml-4 pe-7s-back "></div>
+                <div class="ml-4 pe-7s-angle-right "></div>
                 <div class="ml-4 text-capitalize">
                     <a class="color-inactive" href="videos-stats.html">name-video Lorem ipsum dolor sit amet.</a>
                 </div>
 
-                <div class="ml-4 pe-7s-back "></div>
+                <div class="ml-4 pe-7s-angle-right "></div>
                 <div class="text-capitalize ">
                     <a class="ml-4  " href="videos-stats.html">24 Nov Hourly report</a>
                 </div>
@@ -125,8 +125,11 @@
                                     <tr>
                                         <th>Time</th>
                                         <th>Views</th>
+                                        <th class="delta"></th>
                                         <th>Comments</th>
+                                        <th class="delta"></th>
                                         <th>Like</th>
+                                        <th class="delta"></th>
                                         <th>Dislikes</th>
                                     </tr>
                                     </thead>
@@ -134,30 +137,12 @@
                                     <tr>
                                         <td class="c-white">01:00</td>
                                         <td>323,222</td>
+                                        <td class="delta-number"><span>+25,654</span></td>
                                         <td>1,663,222</td>
+                                        <td class="delta-number"><span>+25,654</span></td>
                                         <td>4,222</td>
+                                        <td class="delta-number"><span>+25,654</span></td>
                                         <td>691,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">02:00</td>
-                                        <td>923,222</td>
-                                        <td>2,663,222</td>
-                                        <td>3,222</td>
-                                        <td>991,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">03:00</td>
-                                        <td>223,222</td>
-                                        <td>3,663,222</td>
-                                        <td>2,222</td>
-                                        <td>391,222</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="c-white">04:00</td>
-                                        <td>123,222</td>
-                                        <td>4,663,222</td>
-                                        <td>1,222</td>
-                                        <td>391,222</td>
                                     </tr>
 
                                     </tbody>
@@ -191,6 +176,11 @@
 <!--Graphs-->
 <script>
     $(document).ready(function () {
+
+
+        //disabled Legend
+        Chart.defaults.global.legend.display = false;
+
 //VideoViews
         var ctxVideoStatsViews = document.getElementById("myChartVideoStats24Views").getContext('2d');
         var myChartVideoStatsViews = new Chart(ctxVideoStatsViews, {
