--- a/www/channels.html
+++ b/www/channels.html
@@ -86,33 +86,38 @@
                                                         <div class="col-12">
                                                             <span>+43</span>
                                                         </div>
-
-
                                                     </div>
-                                                    <div class="col-lg-2 ">
+                                                    <div class="col-lg-1 ">
                                                         <h6 class="text-capitalize">likes</h6>
 
                                                         <div class="col-12">
-                                                            <strong class="c-white">422.444</strong>
+                                                            <strong class="c-white">2.444</strong>
                                                         </div>
                                                         <div class="col-12">
                                                             <span>+433</span>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-2">
+                                                    <div class="col-lg-1 text-center">
+                                                        <h6 class="text-capitalize">Videos</h6>
+                                                        <div class="col-12">
+                                                            <strong class="c-white">252</strong>
+                                                        </div>
+                                                        <div class="col-12">
+                                                            <span>+2</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-2 pl-lg-3">
                                                         <h6 class="text-capitalize">Daily subs</h6>
 
                                                         <div class="col-12">
                                                             <strong class="c-white">422</strong>
                                                         </div>
-
                                                     </div>
                                                     <div class="col-lg-2 ">
                                                         <h6 class="text-capitalize">Daily views</h6>
                                                         <div class="col-12">
                                                             <strong class="c-white">422.444</strong>
                                                         </div>
-
                                                     </div>
                                                 </div>
                                             </div>
@@ -153,232 +158,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel panel-filled">
-                            <div class="panel-body">
-                                <div class="row">
-                                    <div class="col-xs-11 info-block ">
-                                        <div class="row py-4">
-                                            <div class="col-lg-2 col-xs-12">
-                                                <div class="">
-                                                    <img src="images/a3.jpg" alt="" class="img-circle img-fluid">
-                                                </div>
-                                            </div>
-                                            <div class=" col-lg-9 col-xs-12">
-                                                <div class="col-lg-12">
-                                                    <h3 class="text-capitalize py-4">
-                                                        <a href="channel.html">NewChannels 1</a>
-                                                    </h3>
-                                                </div>
-                                                <div class="col-lg-12">
-                                                    <div class="col-lg-2">
-                                                        <h6 class="text-capitalize">subscribers</h6>
 
-                                                        <div class="col-12">
-                                                            <strong class="c-white">122.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+433</span>
-                                                        </div>
-
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">views</h6>
-                                                        <div class="col-12">
-                                                            <strong class="c-white">3.122.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+433.534</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">comments</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">1.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+43</span>
-                                                        </div>
-
-
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">likes</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">422.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+433</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-2">
-                                                        <h6 class="text-capitalize">Daily subs</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">422</strong>
-                                                        </div>
-
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">Daily views</h6>
-                                                        <div class="col-12">
-                                                            <strong class="c-white">422.444</strong>
-                                                        </div>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-1">
-                                        <div class="dropdown text-right">
-                                            <button class="btn btn-menu dropdown-toggle" type="button"
-                                                    data-toggle="dropdown" aria-haspopup="true"
-                                                    aria-expanded="true">
-                                                <i></i>
-                                                <i></i>
-                                                <i></i>
-                                            </button>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="#">Delete</a>
-                                                </li>
-                                                <li class="btn-checkbox pr-3">
-                                                    <a class="delete-selectively" href="#">Delete selectively </a>
-                                                </li>
-
-                                            </ul>
-                                            <div class="">
-                                                <input type="checkbox" class="checkbox-delete btn-hidden"/>
-                                            </div>
-
-                                        </div>
-                                        <div class="move-block text-right">
-                                            <div class="btn-move btn btn-default">
-                                                <div class="pe-7s-angle">
-                                                    <div class="pe-7s-angle-up"></div>
-                                                    <div class="pe-7s-angle-down"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-filled">
-                            <div class="panel-body">
-                                <div class="row">
-                                    <div class="col-xs-11 info-block ">
-                                        <div class="row py-4">
-                                            <div class="col-lg-2 col-xs-12">
-                                                <div class="">
-                                                    <img src="images/a3.jpg" alt="" class="img-circle img-fluid">
-                                                </div>
-                                            </div>
-                                            <div class=" col-lg-9 col-xs-12">
-                                                <div class="col-lg-12">
-                                                    <h3 class="text-capitalize py-4">
-                                                        <a href="channel.html">NewChannels 1</a>
-                                                    </h3>
-                                                </div>
-                                                <div class="col-lg-12">
-                                                    <div class="col-lg-2">
-                                                        <h6 class="text-capitalize">subscribers</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">122.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+433</span>
-                                                        </div>
-
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">views</h6>
-                                                        <div class="col-12">
-                                                            <strong class="c-white">3.122.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+433.534</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">comments</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">1.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+43</span>
-                                                        </div>
-
-
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">likes</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">422.444</strong>
-                                                        </div>
-                                                        <div class="col-12">
-                                                            <span>+433</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-2">
-                                                        <h6 class="text-capitalize">Daily subs</h6>
-
-                                                        <div class="col-12">
-                                                            <strong class="c-white">422</strong>
-                                                        </div>
-
-                                                    </div>
-                                                    <div class="col-lg-2 ">
-                                                        <h6 class="text-capitalize">Daily views</h6>
-                                                        <div class="col-12">
-                                                            <strong class="c-white">422.444</strong>
-                                                        </div>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-1">
-                                        <div class="dropdown text-right">
-                                            <button class="btn btn-menu dropdown-toggle" type="button"
-                                                    data-toggle="dropdown" aria-haspopup="true"
-                                                    aria-expanded="true">
-                                                <i></i>
-                                                <i></i>
-                                                <i></i>
-                                            </button>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="#">Delete</a>
-                                                </li>
-                                                <li class="btn-checkbox pr-3">
-                                                    <a class="delete-selectively" href="#">Delete selectively </a>
-                                                </li>
-
-                                            </ul>
-                                            <div class="">
-                                                <input type="checkbox" class="checkbox-delete btn-hidden"/>
-                                            </div>
-
-                                        </div>
-                                        <div class="move-block text-right">
-                                            <div class="btn-move btn btn-default">
-                                                <div class="pe-7s-angle">
-                                                    <div class="pe-7s-angle-up"></div>
-                                                    <div class="pe-7s-angle-down"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
 
                     <!--modal-->
@@ -424,7 +204,6 @@
         </div>
     </section>
 </div>
-
 
 
 <!-- Vendor scripts -->
