--- a/www/header.html
+++ b/www/header.html
@@ -20,7 +20,14 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-offset-7 col-sm-offset-2 col-md-offset-3 col-lg-1 col-xs-12 col-sm-3 ">
+            <div class="col-lg-offset-6 col-sm-offset-1  col-lg-1 col-xs-12 col-sm-3 ">
+                <ul class="nav navbar-nav  navbar-right ">
+                    <li class="dropdown ">
+                        <a href="#" class=" text-uppercase" data-target="#myModal2" data-toggle="modal">Settings</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-1 col-xs-12 col-sm-3 ">
                 <ul class="nav navbar-nav  navbar-right ">
                     <li class="dropdown ">
                         <a href="login.html" class=" text-uppercase">Logout
@@ -28,7 +35,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </div>
 </nav>
