--- a/www/channel.html
+++ b/www/channel.html
@@ -28,7 +28,7 @@
 
     <!-- Header-->
     <div id="header"></div>
-    <div class="alert alert-success" role="alert"><strong>Channel added</strong></div>
+
     <section class="content">
         <div class="container">
             <div class="row m-t-sm">
@@ -147,11 +147,14 @@
                                             <table class="tableExample2 table table-striped table-hover">
                                                 <thead>
                                                 <tr>
-                                                    <th>Title</th>
                                                     <th>Date</th>
+                                                    <th>Title</th>
                                                     <th>Views</th>
+                                                    <th class="delta"></th>
                                                     <th>Comments</th>
+                                                    <th class="delta"></th>
                                                     <th>Likes</th>
+                                                    <th class="delta"></th>
                                                     <th>%</th>
                                                     <th>Dislikes</th>
                                                     <th>Duration</th>
@@ -159,34 +162,26 @@
                                                 </tr>
                                                 </thead>
                                                 <tbody>
+
                                                 <tr>
-
+                                                    <td>2012/09/06</td>
                                                     <td>
-                                                        <a class="" href="videos-stats.html">Lo Lorem ipsum dolor sit amet. quis quisquam
-                                                        </a></td>
-                                                    <td>2001/09/29</td>
-                                                    <td>1191,654</td>
-                                                    <td>122</td>
-                                                    <td>25</td>
-                                                    <td>5</td>
-                                                    <td>12</td>
-                                                    <td>32:01</td>
-                                                    <td>
-                                                        <div class="">15:07</div>
-                                                        (25%)
+                                                        <a class="" href="videos-stats.html">Lorem ipsum dolor sit amet.Lo quis quis
+                                                        </a> <a href="#" class="ml-3"><span
+                                                            class=" pe-7s-back text-info"></span></a>
                                                     </td>
-
-
-                                                </tr>
-                                                <tr>
-
-                                                    <td>
-                                                        <a class="" href="videos-stats.html">Lo quis quisquam.</a>
+                                                    <td>10,591,654</td>
+                                                    <td class="delta-number">
+                                                        <span class="day">+25,654</span><span class="week">+5,654</span><span class="month">+1,654</span><span class="allTime">+322,654</span>
                                                     </td>
-                                                    <td>2018/09/06</td>
-                                                    <td>91,654</td>
                                                     <td>22</td>
+                                                    <td class="delta-number">
+                                                        <span class="day">+245,654</span><span class="week">+1,654</span><span class="month">+111,654</span><span class="allTime">+322,654</span>
+                                                    </td>
                                                     <td>5</td>
+                                                    <td class="delta-number">
+                                                        <span class="day">+255,654</span><span class="week">+7,654</span><span class="month">+221,654</span><span class="allTime">+322,654</span>
+                                                    </td>
                                                     <td>56</td>
                                                     <td>2</td>
                                                     <td>52:01</td>
@@ -194,46 +189,9 @@
                                                         <div class="">75:07</div>
                                                         (15%)
                                                     </td>
-
-
                                                 </tr>
-                                                <tr>
-
-                                                    <td>
-                                                        <a class="" href="videos-stats.html">Lo quis quisquam.</a>
-                                                    </td>
-                                                    <td>2002/09/26</td>
-                                                    <td>3391,654</td>
-                                                    <td>1322</td>
-                                                    <td>525</td>
-                                                    <td>15</td>
-                                                    <td>182</td>
-                                                    <td>312:01</td>
-                                                    <td>
-                                                        <div class="">15:07</div>
-                                                        (05%)
-                                                    </td>
 
 
-                                                </tr>
-                                                <tr>
-
-                                                    <td>
-                                                        <a class="" href="videos-stats.html">Lo quis quisquam.</a>
-                                                    </td>
-                                                    <td>2017/09/16</td>
-                                                    <td>791,654</td>
-                                                    <td>722</td>
-                                                    <td>75</td>
-                                                    <td>64</td>
-                                                    <td>332</td>
-                                                    <td>112:01</td>
-                                                    <td>
-                                                        <div class="">15:07</div>
-                                                        (45%)
-                                                    </td>
-
-                                                </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -251,7 +209,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="graph">
-                                                                    <canvas  id="myChartChannelsViews"></canvas>
+                                                                    <canvas id="myChartChannelsViews"></canvas>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -263,7 +221,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="graph">
-                                                                    <canvas  id="myChartChannelsSubscribers"></canvas>
+                                                                    <canvas id="myChartChannelsSubscribers"></canvas>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -278,7 +236,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="graph">
-                                                                        <canvas  id="myChartChannelsComments"></canvas>
+                                                                        <canvas id="myChartChannelsComments"></canvas>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -290,7 +248,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="graph">
-                                                                        <canvas  id="myChartChannelsVideos"></canvas>
+                                                                        <canvas id="myChartChannelsVideos"></canvas>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -358,20 +316,19 @@
                                             <div class="col-lg-12 py-3 date-average">
                                                 <div class="panel panel-filled">
                                                     <div class="table-responsive pl-3">
-
-                                                        <table class="tableExample1 table ">
+                                                        <table class="table table-bordered">
                                                             <thead>
                                                             <tr>
                                                                 <th></th>
-                                                                <th>views</th>
-                                                                <th>comments</th>
+                                                                <th>Views</th>
+                                                                <th>Comments</th>
                                                                 <th>Subscribers</th>
                                                                 <th>Videos</th>
                                                             </tr>
                                                             </thead>
                                                             <tbody>
                                                             <tr>
-                                                                <td class="c-white">Daily average</td>
+                                                                <th>Daily average</th>
                                                                 <td>xxxx</td>
                                                                 <td>xxxx</td>
                                                                 <td>xxxx</td>
@@ -379,7 +336,7 @@
 
                                                             </tr>
                                                             <tr>
-                                                                <td class="c-white">Monthly average</td>
+                                                                <th>Monthly average</th>
                                                                 <td>xxxx</td>
                                                                 <td>xxxx</td>
                                                                 <td>xxxx</td>
@@ -412,7 +369,6 @@
 <script src="vendor/flot/jquery.flot.min.js"></script>
 <script src="vendor/flot/jquery.flot.resize.min.js"></script>
 <script src="vendor/flot/jquery.flot.spline.js"></script>
-<script src="vendor/datatables/datatables.min.js"></script>
 <script src="vendor/chart.js/dist/Chart.min.js"></script>
 
 
@@ -421,17 +377,25 @@
 
 <!--Graphs-->
 <script>
+    /*Header*/
+    $(function () {
+        $("#header").load("header.html");
+    });
+
     $(document).ready(function () {
+
+        //disabled Legend
+        Chart.defaults.global.legend.display = false;
 //ChannelViews
         var ctxChannelsViews = document.getElementById("myChartChannelsViews").getContext('2d');
         var myChartChannelsViews = new Chart(ctxChannelsViews, {
             type: 'bar',
             data: {
-                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                labels: [11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21],
                 datasets: [{
 
                     label: 'Views',
-                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60, 15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
                     borderColor: "#d69121",
                     backgroundColor: '#f9a921',
                     borderWidth: 1
@@ -447,7 +411,7 @@
                     }],
                     yAxes: [{
                         ticks: {
-                            beginAtZero:true,
+                            beginAtZero: true,
                             fontColor: "#91949a"
                         }
                     }]
@@ -460,10 +424,10 @@
         var myChartChannelsSubscribers = new Chart(ctxChannelsSubscribers, {
             type: 'bar',
             data: {
-                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                labels: [11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21],
                 datasets: [{
                     label: 'Likes',
-                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60, 15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
                     borderColor: "#d69121",
                     backgroundColor: '#f9a921',
                     borderWidth: 1
@@ -479,7 +443,7 @@
                     }],
                     yAxes: [{
                         ticks: {
-                            beginAtZero:true,
+                            beginAtZero: true,
                             fontColor: "#91949a"
                         }
                     }]
@@ -492,10 +456,10 @@
         var myChartChannelsComments = new Chart(ctxChannelsComments, {
             type: 'bar',
             data: {
-                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                labels: [11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21],
                 datasets: [{
                     label: 'Dislikes',
-                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60, 15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
                     borderColor: "#d69121",
                     backgroundColor: '#f9a921',
                     borderWidth: 1
@@ -511,7 +475,7 @@
                     }],
                     yAxes: [{
                         ticks: {
-                            beginAtZero:true,
+                            beginAtZero: true,
                             fontColor: "#91949a"
                         }
                     }]
@@ -524,10 +488,10 @@
         var myChartChannelsVideos = new Chart(ctxChannelsVideos, {
             type: 'bar',
             data: {
-                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                labels: [11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21, 11.21],
                 datasets: [{
                     label: "Comments",
-                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60, 15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
                     borderColor: "#d69121",
                     backgroundColor: '#f9a921',
                     borderWidth: 1
@@ -543,7 +507,7 @@
                     }],
                     yAxes: [{
                         ticks: {
-                            beginAtZero:true,
+                            beginAtZero: true,
                             fontColor: "#91949a"
                         }
                     }]
